# skyforge

./: .gitignore  ARCHITECTURE.md  README.md  cli.py  pyproject.toml
backend/: app.py  control.py  gateway_ws.py  offline.py  pubsub.py  serve_web.py  supervisor.py
backend/tests/: test_bridge.py  test_gateway_ws.py  test_offline.py  test_serve_web.py  test_supervisor.py  test_ws_and_contract.py
compiler/: assignment.py  deconflict.py  energy.py  envelope.py  formations.py  pipeline.py  sampling.py  show_builder.py  trajectory_generator.py  validator.py  verified_layering.py
compiler/formations/: __init__.py  base.py  dispatch.py
core/: geometry.py
core/reactive/: primitives.py
core/show_format/: reader.py  schema.py  writer.py
docs/: HARDWARE.md  HITL.md  ROADMAP.md  RUNBOOK.md  TESTING.md  TEST_PLAN.md
runtime/: CLAUDE.md  drone_lights.py  failsafe.example.json  fly_single.py  run_commander.py  run_show.py  run_skyforge.py  t1_sitl.sh  t2_gazebo_gui.sh  t3_fly.sh  t4_show.sh  t5_skyforge.sh  t6_commander.sh  t7_qgc.sh  t8_agents.sh  test_flight_4.py
runtime/agent/: onboard_agent.py
runtime/commander/: cli.py  commander.py  dynamic_adapter.py
runtime/show/: apf.py  audio_beat.py  barrier.py  bezier.py  broadcast.py  config.py  connection.py  coordinator.py  drone_controller.py  failsafe_provisioning.py  fleet_monitor.py  formations.py  geodetic.py  gz_world.py  (+3 more)
shows/: four_drone_demo.py  four_drone_demo.skyforge.json  hundred_drone_demo.py  hundred_drone_demo.skyforge.json
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+65 files in other folders)
