[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skyforge"
version = "0.1.0"
description = "Production-grade drone show platform"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "compiler*", "shows*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
