[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skyforge"
version = "0.2.0"
description = "Production-grade drone show platform"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "msgpack>=1.0",
]

[project.scripts]
skyforge = "cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio"]
# Operator UI backend. Kept OUT of core so the `skyforge` CLI installs web-free; mavsdk is
# runtime-only (present via the PX4 venv) and declared here for the UI bridge.
ui = ["fastapi", "uvicorn[standard]", "websockets", "httpx", "mavsdk"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "compiler*", "shows*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
asyncio_mode = "auto"
